--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
               <li><a href="#about">About</a></li>
               <li><a href="#menu">Menu</a></li>
               <li><a href="#specials">Specials</a></li>
+              <li><a href="#events">Events</a></li>
               <li><a href="#contact">Contact</a></li>
             </ul>
             <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
@@ -510,6 +511,161 @@
                 </div>
       </section>
       <!-- /Specials Section -->
+
+        <!-- Events Section -->
+    <section id="events" class="events section">
+
+      <img class="slider-bg" src="assets/img/events-bg.jpg" alt="" data-aos="fade-in">
+
+      <div class="container">
+
+        <div class="swiper init-swiper" data-aos="fade-up" data-aos-delay="100">
+          <script type="application/json" class="swiper-config">
+            {
+              "loop": true,
+              "speed": 2000,
+              "autoplay": {
+                "delay": 10000
+              },
+              "slidesPerView": "auto",
+              "pagination": {
+                "el": ".swiper-pagination",
+                "type": "bullets",
+                "clickable": true
+              }
+            }
+          </script>
+          <div class="swiper-wrapper">
+
+            <div class="swiper-slide">
+              <div class="row gy-4 event-item">
+                <div class="col-lg-6">
+                  <img src="assets/img/events-slider/events-slider-1.jpg" class="img-fluid" alt="">
+                </div>
+                <div class="col-lg-6 pt-4 pt-lg-0 content">
+                  <h3>PESTA PERNIKAHAN</h3>
+                  <div class="price">
+                    <p><span>Rp10.000.000</span></p>
+                  </div>
+                  <p class="fst-italic">
+                    Cinta Bersemi dalam Nuansa Nusantara
+                  </p>
+
+                  <p>
+                    Hari spesial Anda pantas dirayakan dengan keindahan dan kehangatan terbaik.
+                    Restoran NUSANTARA menghadirkan sentuhan budaya, cita rasa istimewa, dan suasana elegan 
+                    untuk menjadikan momen pernikahan Anda tak terlupakan.
+                  </p>
+
+                  <p>
+                    Kenapa Memilih NUSANTARA?
+                  </p>
+                  <ul>
+                    <li><i class="bi bi-check2-circle"></i> <span>Hidangan Istimewa: Perpaduan menu tradisional dan modern yang memikat hati setiap tamu.</span></li>
+                    <li><i class="bi bi-check2-circle"></i> <span>Dekorasi Bertema Nusantara: Menyuguhkan keindahan adat yang elegan.</span></li>
+                    <li><i class="bi bi-check2-circle"></i> <span>Fasilitas Premium: Ruangan eksklusif untuk acara kecil hingga besar.</span></li>
+                    <li><i class="bi bi-check2-circle"></i> <span>Layanan Profesional: Tim profesional siap menghadirkan kesempurnaan.</span></li>
+                  </ul>
+                  <p>
+                    Pesan Sekarang!
+                    Kuota terbatas untuk acara spesial Anda!
+                  </p>
+                  <p>
+                  NUSANTARA: Tempat cinta bertemu tradisi, dalam kemegahan yang tak tertandingi.
+
+                  </p>
+                </div>
+              </div>
+            </div><!-- End Slider item -->
+
+            <div class="swiper-slide">
+              <div class="row gy-4 event-item">
+                <div class="col-lg-6">
+                  <img src="assets/img/events-slider/events-slider-2.jpg" class="img-fluid" alt="">
+                </div>
+                <div class="col-lg-6 pt-4 pt-lg-0 content">
+                  <h3>PESTA ULANG TAHUN</h3>
+                  <div class="price">
+                    <p><span>Rp10.000.000</span></p>
+                  </div>
+                  <p class="fst-italic">
+                    Rayakan Ulang Tahun dalam Kehangatan Nusantara
+                  </p>
+                  <p>
+                    Jadikan hari spesial Anda lebih berkesan bersama Restoran NUSANTARA!
+                    Kami menghadirkan pengalaman yang memadukan kelezatan kuliner, suasana hangat,
+                    dan pelayanan terbaik untuk menciptakan pesta ulang tahun yang tak terlupakan.
+                  </p>
+                  Kenapa Memilih NUSANTARA?
+                  <p>
+
+                  </p>
+                  <ul>
+                    <li><i class="bi bi-check2-circle"></i> <span>Menu Spesial Ulang Tahun: Hidangan Nusantara favorit atau kreasi modern yang memanjakan lidah Anda dan para tamu.</span></li>
+                    <li><i class="bi bi-check2-circle"></i> <span>Dekorasi Tematik: Dari elegan hingga ceria, sesuai dengan tema ulang tahun Anda.</span></li>
+                    <li><i class="bi bi-check2-circle"></i> <span>Fasilitas Nyaman dan Mewah: Cocok untuk acara intim bersama keluarga atau perayaan besar bersama kekasih dan sahabat</span></li>
+                    <li><i class="bi bi-check2-circle"></i> <span>Layanan Profesional: Tim profesional siap menghadirkan kesempurnaan.</span></li>
+                  </ul>
+                  <p>
+                    Pesan Sekarang!
+                    Kuota terbatas untuk acara spesial Anda!
+                  </p>
+                  <p>
+                    NUSANTARA: Tempat bahagia Anda dirayakan dengan cita rasa dan keindahan budaya.
+                  </p>
+                </div>
+              </div>
+            </div><!-- End Slider item -->
+
+            <div class="swiper-slide">
+              <div class="row gy-4 event-item">
+                <div class="col-lg-6">
+                  <img src="assets/img/events-slider/events-slider-3.jpg" class="img-fluid" alt="">
+                </div>
+                <div class="col-lg-6 pt-4 pt-lg-0 content">
+                  <h3>PESTA PANTAI</h3>
+                  <div class="price">
+                    <p><span>Rp10.000.000</span></p>
+                  </div>
+                  <p class="fst-italic">
+                    Pesta Pantai dengan Sentuhan Budaya Bali: Suasana Tropis yang Memikat!
+                  </p>
+                  <p>
+                    Ciptakan momen yang penuh kehangatan dan kegembiraan bersama Restoran NUSANTARA!
+                    Dibalut dengan nuansa tropis dan budaya Bali yang kental, kami hadir untuk membuat
+                    pesta pantai Anda semakin spesial.
+                  </p>
+                  </p>
+                  Kenapa Memilih NUSANTARA?
+                  <p>
+                  <ul>
+                    <li><i class="bi bi-check2-circle"></i> <span>Menu Eksotis: Hidangan laut segar, sate lilit Bali, ayam betutu, dan berbagai pilihan tropis yang memanjakan lidah.</span></li>
+                    <li><i class="bi bi-check2-circle"></i> <span>Dekorasi Bali yang Memikat: Payung Bali berwarna cerah, hiasan bunga kamboja, dan ornamen khas Bali seperti patung-patung cantik yang menghidupkan suasana.</span></li>
+                    <li><i class="bi bi-check2-circle"></i> <span>Hiburan Bali: Tarian kecak, gamelan Bali, atau DJ dengan sentuhan musik tropis, membuat suasana pesta pantai semakin meriah.</span></li>
+                    <li><i class="bi bi-check2-circle"></i> <span>Fasilitas Outdoor yang Memesona: Nikmati keindahan pantai dengan pemandangan eksotis, area santai, dan kolam renang yang mengingatkan pada suasana Bali.</span></li>
+                    <li><i class="bi bi-check2-circle"></i> <span>Layanan Profesional: Tim profesional siap menghadirkan kesempurnaan.</span></li>
+                  </ul>
+                  <p>
+                    Nikmati paket lengkap dengan dekorasi bertema Bali, hidangan khas, serta hiburan yang memanjakan setiap tamu. Kami akan membantu mewujudkan pesta pantai dengan sentuhan magis budaya Bali.
+                  </p>
+                  <p>
+                    Pesan Sekarang!
+                    Kuota terbatas untuk acara spesial Anda!
+                  </p>
+                  <p>
+                    NUSANTARA: Di mana keindahan Bali bertemu keseruan pesta pantai yang tak terlupakan!
+                  </p>
+                </div>
+              </div>
+            </div><!-- End Slider item -->
+
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
+
+      </div>
+
+    </section><!-- /Events Section -->
 
       <!-- Contact Section -->
       <section id="contact" class="contact section">
